--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "electron-updater": "5.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "6.3.0",
     "react-select": "^5.3.2",
     "styled-components": "5.3.5"
@@ -133,6 +134,7 @@
     "@types/node": "17.0.33",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "@types/react-modal": "^3.13.1",
     "@types/react-test-renderer": "18.0.0",
     "@types/terser-webpack-plugin": "5.0.4",
     "@types/webpack-bundle-analyzer": "4.4.1",
